<resources>
    <string name="app_name">"ChargeFinder"</string>
    <string name="action_settings">"Einstellungen"</string>
    <string name="action_share">"Teilen"</string>
    <string name="start_navigation">"Navigation starten"</string>
    <string name="search">"Suche…"</string>
    <string name="getCoordinatesFromSearch">"Ermittle Koordinaten aus Sucheingabe..."</string>
    <string name="yes">"Ja"</string>
    <string name="no">"Nein"</string>
    <string name="cancel">"Abbrechen"</string>
    <string name="save">"Speichern"</string>
    <string name="help">"Hilfe"</string>
    <string name="geoAktivieren">"Ihr GPS ist deaktiviert. Möchten Sie es aktivieren?"</string>
    <string name="netzwerkAktivieren">"Ihre Netzwerkverbindung ist deaktiviert. Möchten Sie sie aktivieren?"</string>
    <string name="geoSource">"Geo-Quelle wählen…"</string>
    <string name="netSource">"Netzwek-Quelle wählen…"</string>
    <string name="geoSource_gps">"GPS"</string>
    <string name="geoSource_net">"Netzwerk"</string>
    <string name="geoSource_pas">"Passiv"</string>
    <string name="netSource_roaming">"Mobile Daten"</string>
    <string name="netSource_wifi">"WLAN"</string>
    <string name="geoSearch1">"Suche Standort durch "</string>
    <string name="geoSearch2">"-Verbindung…"</string>
    <string name="geoNoResult">"Kein Standort gefunden."</string>
    <string name="searchCancelled">"Suche durch Benutzer abgebrochen."</string>
    <string name="noSearchResults">"Keine Suchergebnisse."</string>
    <string name="noPositionResults">"Kein Standort gefunden."</string>
    <string name="searching">"Suche..."</string>
    <string name="title_activity_single_item">SingleItemActivity</string>
    <string name="from">"von"</string>
    <string name="to">"bis"</string>
    <string name="searchfilter">"Suchfilter"</string>
    <string name="filter_saved">"Filter gespeichert"</string>
    <string name="share_via">"Share via"</string>
    <string name="share_msg">"Check out this awesome Charger, it's splendid!\n"</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_filter">SearchFilterActivity</string>

    <!--Hier die Texte für die OpenChargePoint-Attribute-->
    <string name="operator">"Betreiber"</string>
    <string name="distance">"Distanz"</string>
    <string name="connection">"Verbindung"</string>
    <string name="level">"Level"</string>
    <string name="amp">"Stromstaerke"</string>
    <string name="volt">"Spannung"</string>
    <string name="kw">"KW"</string>
    <string name="maxresults">"Max. Ergebnismenge"</string>
    <string name="title_activity_help">HelpActivity</string>

</resources>
