<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">


    <LinearLayout
        android:id="@+id/searchFilterRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operator"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <!--<RelativeLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/distance"-->
        <!--android:id="@+id/distance"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/from"-->
        <!--android:id="@+id/textView_distance_from"-->
        <!--android:layout_toLeftOf="@+id/distance_from"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/distance_from"-->
        <!--android:layout_toLeftOf="@+id/textView_distance_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/to"-->
        <!--android:id="@+id/textView_distance_to"-->
        <!--android:layout_toLeftOf="@+id/distance_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/distance_to"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <!--<RelativeLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/amp"-->
        <!--android:id="@+id/textView_amp"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/from"-->
        <!--android:id="@+id/textView_amp_from"-->
        <!--android:layout_toLeftOf="@+id/amp_from"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/amp_from"-->
        <!--android:layout_toLeftOf="@+id/textView_amp_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/to"-->
        <!--android:id="@+id/textView_amp_to"-->
        <!--android:layout_toLeftOf="@+id/amp_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/amp_to"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true" />-->
        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/volt"-->
        <!--android:id="@+id/textView_volt"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/from"-->
        <!--android:id="@+id/textView_volt_from"-->
        <!--android:layout_toLeftOf="@+id/volt_from"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/volt_from"-->
        <!--android:layout_toLeftOf="@+id/textView_volt_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/to"-->
        <!--android:id="@+id/textView_volt_to"-->
        <!--android:layout_toLeftOf="@+id/volt_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/volt_to"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true" />-->
        <!--</RelativeLayout>-->


        <!--<RelativeLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/kw"-->
        <!--android:id="@+id/textView_kw"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/from"-->
        <!--android:id="@+id/textView_kw_from"-->
        <!--android:layout_toLeftOf="@+id/kw_from"-->
        <!--android:layout_alignParentTop="true" />-->
        <!-- -->
        <!-- -->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/kw_from"-->
        <!--android:layout_toLeftOf="@+id/textView_kw_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/to"-->
        <!--android:id="@+id/textView_kw_to"-->
        <!--android:layout_toLeftOf="@+id/kw_to"-->
        <!--android:layout_alignParentTop="true" />-->

        <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:ems="3"-->
        <!--android:id="@+id/kw_to"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_kw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kw"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/textView_kw_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/from"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/kw_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:ems="3"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_maxresults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxresults"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/maxresults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:ems="3"
                android:inputType="number" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
